--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section class="container">
+            <h3 class="text-center mt-4">How does Javascript work ?</h3>
+            <p>Ans: Javascript is a client side scripted language which we run in the browsers. Every browsers has a JS Engine(V8 Engine in chrome browser) and we run javascript code through this engine. Every engine has a parser and we parse js code through parser. Javascript is a interpreted progamming language, so parser check the js codes line by line and if there is no error then its produce a data Structure called Abstract Stntax tree. Then js codes conver to mechine code through Abstract Syntax Tree.And finally code runs in the browsers</p>
+
+
+            <h3 class="text-center mt-4">What are the difference between LocalStorage and SessionStorage ?</h3>
+            <p>Ans: 1. LocalStorage is a way to store data on the client's computer with no expiration date. SessionStorage is a way to stores data only for session, mening for that the data is stored until the browser( or Tab) is closed.
+                2. The storage capacity of local storage is 5MB/10MB. The storage capacity of session storage is 5MB.
+            </p>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
